syntax = "proto3";

package ci.monitoring.juggler;

import "tasklet/api/tasklet.proto";
import "tasklet/services/ci/proto/ci.proto";
import "ci/tasklet/common/proto/service.proto";

message JugglerFilter {
	string host = 1;
    string service = 2;
    repeated string tags = 3; // filtering by AND
    string namespace = 4;
}

message Config {
    int64 delay_minutes = 1;
    int64 duration_minutes = 2;
    bool fail_on_warn = 3;
    repeated JugglerFilter filters = 4; // filtering by OR
}

message Input {
    Config config = 1;
    ci.TaskletContext context = 2;
}

message Output {
}

message JugglerWatchContext {
    option (tasklet.context) = true;

    ci.CiService ci = 1 [(tasklet.inject) = true];
}

message JugglerWatch {
    option (tasklet.tasklet_interface) = true;

    JugglerWatchContext ctx = 1;
    Input input = 2 [(tasklet.input) = true];
    Output output = 3 [(tasklet.output) = true];
}
